tests/baselines/reference/amdDependencyComment1.errors.txt
==== tests/cases/compiler/amdDependencyComment1.ts (3 errors) ====
    ///<amd-dependency path='bar'/>
    
    import m1 = require("m2")
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! amdDependencyComment1.ts(3,1): error TS2071: Cannot find external module '"m2"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! amdDependencyComment1.ts(3,1): error TS2072: Module cannot be aliased to a non-module type.
    m1.f();
    ~~
!!! amdDependencyComment1.ts(4,1): error TS2095: Cannot find name 'm1'.